# PixelRAG

./: .upptimerc.yml  README.md  RELEASING.md  index.html  pyproject.toml  service-worker-index.html
.github/scripts/: generate-summary.mjs
.github/workflows/: chrome-build.yml  release.yml  uptime-response-time.yml  uptime-site.yml  uptime-summary.yml  uptime.yml
client/: _number_.285eb8d4.js  _number_.8eed5025.js  client.475809f7.js  createOctokit.40c2ca49.js  error.de93a048.js  index.74f92a97.js  rate-limit-exceeded.dcc38c8f.js
client/legacy/: _number_.2966cef2.js  _number_.d09edecd.js  client.302fe06f.js  createOctokit.e61e581c.js  error.830241c6.js  index.1ff2ed4f.js  rate-limit-exceeded.7dc873f6.js
deploy/: pixelrag-agent.service
docs/internal/: screenshot-optimization-notes.md
embed/src/pixelrag_embed/: chunk.py  embed.py  embed_cpu.py  index.py
eval/: run_bench.py
eval/lib/: pixel_query.py
history/: agent.yml  api-health.yml  search-api.yml  summary.json  tile-serving.yml
index/src/pixelrag_index/: pipelines.py
render/chrome-build/: BUILD.md  build-headless-shell.sh  pixelrag-chrome.patch
render/src/pixelrag_render/: render.py
render/src/pixelrag_render/backends/: cdp.py  fast_cdp.py  pdf.py
serve/src/pixelrag_serve/: api.py  backends.py
status-site/: index.html
tests/: test_cli.py  test_incremental_rerun.py  test_local_image_render.py  test_local_source_text.py  test_pixel_query_paths.py  test_serve_backends.py
train/docs/: natural_filtered_v2.md  synthetic_data_pipeline.md
train/sft/: download_tiles.py  eval_baseline.py  eval_multiimage.py  fetch_top6_retrieval.py  generate_think_traces.py  generate_think_traces_v2.py  prepare_mixed_data.py  prepare_sft_data.py  prepare_sft_data_multiimage.py  prepare_sft_data_upscale.py  prepare_sft_data_variable.py  prepare_think_data.py  push_3x_v5_snapshot.py  push_multi3_to_hf.py  push_multik_to_hf.py  push_to_hf.py  push_universal_to_hf.py
web/: agent-server.mjs
web/app/: globals.css  page.tsx
web/app/api/chat/: route.ts
web/app/chat/: page.tsx
web/app/docs/: page.tsx
web/components/: AboutSection.tsx  ModeToggle.tsx  NavLinks.tsx  SearchBar.tsx
